FIX: Adjusted the names of the expand and collapse class names to specify if they are up or down.

--- a/packages/simple-animation/src/styles/animations/expand-collapse.scss
+++ b/packages/simple-animation/src/styles/animations/expand-collapse.scss
@@ -1,5 +1,5 @@
 @import "../mixin/create-rule";
-@include create-rules((collapse, expand)){
+@include create-rules((collapse, expand), (up, down)){
   transform-origin: top left;
   overflow: hidden;
 };
